<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="app_name" translatable="false">BiglyBT</string>
	<string name="settings">Settings</string>
	<string name="btnLoginLabel">Connect</string>
	<string name="addtorrent_label">To add a torrent, enter a torrent URL, magnet url, or torrent hash:</string>
	<string name="action_sortby">Sort</string>
	<string name="action_filterby">Filter</string>
	<string name="filterby_title">Filter By</string>
	<string-array name="filterby_list">
		<item>8,All</item>
		<item>4,Active</item>
		<item>9,Complete</item>
		<item>1,Incomplete</item>
		<item>2,Stopped</item>
	</string-array>
	<string-array name="sortby_list">
		<item>Queue</item>
		<item>Activity</item>
		<item>Age</item>
		<item>Progress</item>
		<item>Ratio</item>
		<item>Size</item>
		<item>State</item>
		<item>ETA</item>
		<item># Files</item>
	</string-array>
	<string-array name="sortby_ms_list">
		<item>Rank</item>
		<item>Name</item>
		<item>Seeds</item>
		<item>Size</item>
		<item>Publish Date</item>
	</string-array>
	<string-array name="sortby_rcm_list">
		<item>Rank</item>
		<item>Name</item>
		<item>Seeds</item>
		<item>Size</item>
		<item>Publish Date</item>
		<item>Last Seen</item>
	</string-array>
	<string-array name="sortby_sl_list">
		<item>Name</item>
		<item>Last Checked</item>
		<item># New</item>
	</string-array>
	<string-array name="sortby_file_list">
		<item>File Tree</item>
		<item>Name</item>
		<item>Size</item>
	</string-array>
	<string name="action_start_all">Start All</string>
	<string name="action_stop_all">Stop All</string>
	<string name="action_add_torrent">Add</string>
	<string name="action_sel_start">Start</string>
	<string name="action_sel_launch">Launch</string>
	<string name="action_sel_stop">Stop</string>
	<string name="action_sel_move">Reposition</string>
	<string name="action_sel_remove">Remove</string>
	<string name="search">Search</string>
	<string name="action_sel_relocate">Change Save Folder</string>
	<string name="action_sel_forcestart">Force Start</string>
	<string name="action_adv_login">Advanced Login</string>
	<string name="action_sel_move_up">Move Up</string>
	<string name="action_sel_move_down">Move Down</string>
	<string name="action_sel_move_top">Move Top</string>
	<string name="action_sel_move_bottom">Move Bottom</string>
	<string name="action_sel_move_position">Move To&#8230;</string>
	<string name="access_code_hint">Remote Access Code</string>
	<string name="title_activity_metasearch">Search</string>
	<string name="action_logout">Log Out</string>
	<string name="hint_filter">Filter</string>
	<string name="wv_center_default">Connecting to Remote</string>
	<string name="state_connecting">Connecting</string>
	<string name="rp_download_speed">Download Speed</string>
	<string name="kbps">Kb/s</string>
	<string name="rp_upload_speed">Upload Speed</string>
	<string name="rp_update_interval">Refresh Interval</string>
	<string name="rp_update_interval_nonmobile">Non-Mobile Refresh Interval</string>
	<string name="profile_nickname">Nickname</string>
	<string name="profile_host_explain">Host name or IP of your host machine</string>
	<string name="profile_port">Port</string>
	<string name="profile_port_default" translatable="false">9091</string>
	<string name="profile_user_name">User Name</string>
	<string name="profile_password">Password</string>
	<string name="profile_host_hint">Host Name or IP address</string>
	<string name="profile_nick_explain">Friendly name for the remote host</string>
	<string name="profile_localnick_explain">Friendly name for torrenting client running on this android device</string>
	<string name="action_edit_pref">Edit Profile</string>
	<string name="action_delete_pref">Remove Profile</string>
	<string name="search_box_hint">Find Torrents&#8230;</string>
	<string name="no_network_connection">No Network Connection</string>
	<string name="no_file_chooser">No suitable File Manager was found</string>
	<string name="no_intent">No suitable application was found to launch</string>
	<string name="intent_security_fail">Security error while trying to launch app</string>
	<string name="button_browse">Browse&#8230;</string>
	<string name="error_remote_not_found">Unable to connect to your remote client.  It does not appear to be running.</string>
	<string name="error_connecting">Error Connecting</string>
	<string name="button_continue">Continue</string>
	<string name="action_about">About BiglyBT</string>
	<string name="about_thanks" translatable="false">
&#xB7; &lt;a href="https://github.com/alibaba/fastjson">Fast JSON Processor&lt;/a>, Apache License v2, &#169; 1999-2013 Alibaba Group Holding Ltd.
\n
&#xB7; &lt;a href="https://github.com/jpardogo/PagerSlidingTabStrip">jpardogo / PagerSlidingTabStrip&lt;/a>, Apache License v2, &#169; 2013 Andreas Stuetz
\n
&#xB7; &lt;a href="http://jcifs.samba.org/">jCIFS&lt;/a>, LGPL 2.1
\n
&#xB7; &lt;a href="https://github.com/rengwuxian/MaterialEditText">rengwuxian / MaterialEditText&lt;/a>, Apache License v2, &#169; 2014 rengwuxian
\n
&#xB7; &lt;a href="https://github.com/Nammari/RecyclerView-FastScroll">Nammari / RecyclerView-FastScroll&lt;/a>, Apache License v2, &#169; 2016 Tim Malseed
\n
&#xB7; &lt;a href="https://google.github.io/material-design-icons/">Material Design Icons&lt;/a>, CC-BY 4.0
\n
&#xB7; &lt;a href="https://github.com/divStar/ico4a">divStar / ico4a&lt;/a>, GPLv3
\n
&#xB7; &lt;a href="https://github.com/square/picasso">square / picasso&lt;/a>, Apache License v2, &#169; Square, Inc.
\n
&#xB7; &lt;a href="https://github.com/square/okttp">square / okhttp&lt;/a>, Apache License v2, &#169; Square, Inc.
\n
&#xB7; &lt;a href="https://mvnrepository.com/artifact/net.i2p.android/helper">I2P Android Helper Library&lt;/a>, Apache License v2
\n
&#xB7; &lt;a href="http://www.dnsjava.org/">dnsjava&lt;/a>, BSD license
\n
&#xB7; &lt;a href="https://github.com/google/flexbox-layout">FlexboxLayout&lt;/a>, Apache License v2
\n
&#xB7; &lt;a href="https://github.com/jiechic/tray/tree/version">jiechic / tray&lt;/a>, Apache License v2, &#169; 2015 grandcentrix GmbH
\n
&#xB7; &lt;a href="https://github.com/jaredrummler/AndroidDeviceNames">AndroidDeviceNames&lt;/a>, Apache License v2, &#169; 2015 Jared Rummler
\n
&#xB7; &lt;a href="https://github.com/SumiMakito/AwesomeQRCode">SumiMakito / AwesomeQRCode&lt;/a>, Apache License v2, &#169; 2017 Sumi Makito
\n
&#xB7; &lt;a href="https://github.com/BiglySoftware/Android-Toggle-Switch">BiglySoftware / Android-Toggle-Switch&lt;/a>, MIT License, &#169; 2016 Belka s.r.l.
</string>
	<string name="about_thanks_header">Portions of this app thanks to:</string>
	<string name="about_copyright" translatable="false">(c) 2018 Bigly Software</string>
	<string name="about_translator">%1$s translation provided by PUTYOURNAMEHERE</string>
	<string name="login_guide">Go to |Tools| > |Remote Pairing| in the BiglyBT or Vuze desktop client to find your Remote Access Code.</string>
	<string name="login_guide2">To configure a manual remote, try the &lt;a href="biglybt://remote/cmd=advlogin">Advanced Login&lt;/a>.  See the @@&lt;a href="http://wiki.biglybt.com/w/Android_Remote_Guide">Guide&lt;/a> for more help.</string>
	<string name="dialog_delete_title">Remove Torrent?</string>
	<string name="dialog_delete_message">The torrent \'%s\' will be removed.</string>
	<string name="dialog_delete_button_remove">Remove</string>
	<string name="profile_list_header">Available Clients</string>
	<string name="movedata_label">New location for &lt;b>%1$s&lt;/b>:</string>
	<string name="movedata_history">History</string>
	<string name="move_data_storeinhistory">Store location in history</string>
	<string name="biglybt_logo">BiglyBT Logo</string>
	<string name="action_refresh">Refresh</string>
	<string name="about_ideas">If you like our app, please consider a &lt;a href="subscribe">subscription&lt;/a> to help continue development.  Or, if you are broke, rate us on the &lt;a href="market://details?id=com.biglybt.android.client">Google Play Store&lt;/a>!</string>
	<string name="addtorrent_info">If you don\'t have a torrent file, you can search for one using your remote machine\'s search templates.  Simply click on the search button and type in a search term.</string>
	<string name="profile_ac_explain">Your connection settings, such as IP address and port, are all managed by your Access Code</string>
	<string name="biglybt_required">Sorry, feature \'%s\' requires a connection to a BiglyBT client.  We\'d love it if you switched! ^_^</string>
	<string name="old_rpc">Your remote machine is running an old version of Transmission.  Some (or all!) functionality may not work.  For better results, please upgrade Transmission to 2.40 (RPC 14) or higher</string>
	<string name="last_used_ago">Last connected %s</string>
	<string name="last_used_never">Never connected</string>
	<string name="last_updated">Last updated %s</string>
	<plurals name="torrent_row_info">
		<item quantity="one">%d File</item>
		<item quantity="other">%d Files</item>
	</plurals>
	<string name="torrent_row_info2">, %s</string>
	<string name="action_issues">Report an Issue</string>
	<string name="action_giveback">Give Back</string>
	<string name="action_rate">Rate App</string>
	<string name="rcm_ftux2_heading">Additional Information and Warnings about this feature</string>
	<string name="rcm_ftux2_info">For tracker sites not included in the tracker 
sites pre-selected by BiglyBT, we additionally warn that some of those tracker 
sites might be accused of being more likely to track torrent 
files that might infringe upon the rights of others, including copyright, 
and might include more \"adult\" content, 
some of which might be alleged to infringe upon the rights of others. 
\n\n
Given how Swarm Discoveries works, third party torrent files that 
might automatically be considered "related" to the torrent files on your device 
which are found by the way of either BiglyBT pre-selected tracker sites or 
\"all\" discoveries, might be "related" only by virtue 
of the fact that if you and other users have \"ABC.torrent,\" for example, 
and many or some of those other users have 
\"XXX.torrent,\" Swarm Discoveries might consider the \"XXX.torrent\" to be \"related\". 
You might want to take additional care in selecting what Swarm Discovery 
content you wish to download, as well as then make available for uploading.</string>
	<string name="rcm_ftux2_agree">I understand and agree. Enable all discoveries related to my existing torrent files, irrespective of what tracker sites the torrent contains.
I have read &lt;a href="https://wiki.biglybt.com/w/Swarm_Discoveries">here&lt;/a> and &lt;a href="http://en.wikipedia.org/wiki/BitTorrent#Legal_issues">here&lt;/a> about those tracker sites and some risks of using them, 
and <b>I understand and agree</b> that BiglyBT has no responsibility whatsoever 
with my enabling this function. 
I agree that is my responsibility to ensure that I am only downloading 
lawful and non-infringing content.</string>
	<string name="drawer_rcm">Swarm Discoveries</string>
	<string name="profile_use_https">Use https</string>
	<string name="tag_filter">Tag Filter</string>
	<string name="text_filter">Text Filter</string>
	<string name="export_profiles">Export Profiles</string>
	<string name="import_profiles">Import Profiles</string>
	<string name="action_add_profile">Add Profile</string>
	<string name="action_shutdown_core">Shutdown Service</string>
	<string name="search_filter">Filters</string>
	<string name="filterby_header_filesize">File Size</string>
	<string name="filterby_header_age">Age</string>
	<string name="filterby_header_lastseen">Last Seen</string>
	<string name="filterby_header_minimum_rank">Minimum Rank</string>
	<string name="filterby_header_minimum_seeds">Minimum Seeds</string>
	<string name="button_clear_filters">Clear Filters</string>
	<string name="profile_only_i2p">Only connect using I2P</string>
</resources>