<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center|center_vertical"
		android:orientation="vertical"
		android:padding="16dp">

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/profile_setting_spacer"
			android:hint="@string/profile_nickname"
			app:helperText="@string/profile_nick_explain">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/profile_nick"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:imeOptions="actionNext"
				android:inputType="text"
				android:maxLines="1">

				<requestFocus />
			</com.google.android.material.textfield.TextInputEditText>
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/profile_setting_spacer"
			android:hint="@string/access_code_hint"
			app:helperText="@string/profile_ac_explain">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/profile_ac"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:imeOptions="actionNext"
				android:inputType="text"
				android:maxLines="1" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.switchmaterial.SwitchMaterial
			android:id="@+id/profile_only_i2p"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/profile_only_i2p"
			android:visibility="gone"
			tools:visibility="visible" />

	</LinearLayout>

</ScrollView>