<!--
  ~ Copyright (c) Azureus Software, Inc, All Rights Reserved.
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 2
  ~ of the License, or (at your option) any later version.
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program; if not, write to the Free Software
  ~ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
			xmlns:tools="http://schemas.android.com/tools"
			xmlns:app="http://schemas.android.com/apk/res-auto"
			tools:ignore="AppCompatResource,UnusedAttribute">

	<item
		android:icon="@android:drawable/ic_menu_add"
		android:showAsAction="ifRoom"
		android:id="@+id/action_add_profile"
		android:title="@string/action_add_profile"
		app:showAsAction="ifRoom">
	</item>

	<item
		android:id="@+id/action_export_prefs"
		android:showAsAction="never"
		android:title="@string/export_profiles"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_import_prefs"
		android:showAsAction="never"
		android:title="@string/import_profiles"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_about"
		android:showAsAction="never"
		android:title="@string/action_about"
		app:showAsAction="never"/>

</menu>