<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Azureus Software, Inc, All Rights Reserved.
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 2
  ~ of the License, or (at your option) any later version.
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program; if not, write to the Free Software
  ~ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  -->

<LinearLayout
	android:id="@+id/sidelist_layout"
	style="@style/sidelist_main"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="@dimen/sidelist_rcm_width"
	android:layout_height="match_parent"
	tools:showIn="@layout/activity_rcm">

	<LinearLayout
		android:id="@+id/sidesort_header"
		style="@style/sidelist_header">

		<ImageView
			style="@style/sidelist_header_image"
			android:contentDescription="@string/action_sortby"
			app:srcCompat="@drawable/ic_sort_white_24dp"
			tools:src="@drawable/ic_sort_white_24dp"/>

		<TextView
			style="@style/sidelist_header_text"
			android:text="@string/action_sortby"/>

		<TextView
			android:id="@+id/rcm_sort_current"
			style="@style/sidelist_header_currentinfo"
			tools:text="Rank ▲"/>
	</LinearLayout>

	<com.biglybt.android.FlexibleRecyclerView
		android:id="@+id/sidesort_list"
		style="@style/sidelist_body"
		android:fadingEdge="vertical"
		android:fadingEdgeLength="10dp"
		android:nextFocusDown="@id/sidefilter_header"
		android:scrollbars="vertical"
		app:fastScrollerEnabled="false"
		tools:listitem="@layout/row_sidesort"
		tools:visibility="visible"/>


	<LinearLayout
		android:id="@+id/sidefilter_header"
		style="@style/sidelist_header"
		android:layout_width="match_parent">

		<ImageView
			style="@style/sidelist_header_image"
			android:contentDescription="@string/tag_filter"
			android:paddingLeft="2dp"
			android:paddingStart="2dp"
			app:srcCompat="@drawable/ic_filter_list_white_24dp"
			tools:src="@drawable/ic_filter_list_white_24dp"/>

		<TextView
			style="@style/sidelist_header_text"
			android:text="@string/search_filter"/>

		<TextView
			android:id="@+id/rcm_filter_current"
			style="@style/sidelist_header_currentinfo"
			tools:text="0 B - ~ (4.22GB)\n4 Days"/>
	</LinearLayout>

	<ScrollView
		android:id="@+id/sidefilter_list"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:visibility="gone"
		tools:visibility="visible">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:orientation="vertical">

			<LinearLayout
				android:id="@+id/sidefilter_filesize"
				style="@style/sidelist_rcm_item_layout"
				android:onClick="fileSizeRow_clicked"
				tools:visibility="visible">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/filterby_header_filesize"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="@drawable/list_sidebar_content_fg"
					/>

				<TextView
					android:id="@+id/rcm_filter_size_current"
					style="@style/sidelist_rcm_item_line2"
					tools:text="0 B - ~ (4.22GB)"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/sidefilter_age_row"
				style="@style/sidelist_rcm_item_layout"
				android:onClick="ageRow_clicked">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/filterby_header_age"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="@drawable/list_sidebar_content_fg"
					/>

				<TextView
					android:id="@+id/rcm_filter_age_current"
					style="@style/sidelist_rcm_item_line2"
					tools:text="4 Days"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/sidefilter_lastseen_row"
				style="@style/sidelist_rcm_item_layout"
				android:onClick="lastSeenRow_clicked">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/filterby_header_lastseen"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="@drawable/list_sidebar_content_fg"
					/>

				<TextView
					android:id="@+id/rcm_filter_lastseen_current"
					style="@style/sidelist_rcm_item_line2"
					tools:text="4 Days"/>
			</LinearLayout>

			<LinearLayout
				style="@style/sidelist_rcm_item_layout"
				android:onClick="minRankRow_clicked">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/filterby_header_minimum_rank"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="@drawable/list_sidebar_content_fg"
					/>

				<TextView
					android:id="@+id/rcm_filter_min_rank"
					style="@style/sidelist_rcm_item_line2"
					tools:text="1"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/sidefilter_minseeds_row"
				style="@style/sidelist_rcm_item_layout"
				android:onClick="minSeedsRow_clicked">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/filterby_header_minimum_seeds"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="@drawable/list_sidebar_content_fg"
					/>

				<TextView
					android:id="@+id/rcm_filter_min_seeds"
					style="@style/sidelist_rcm_item_line2"
					tools:text="At Least 3 Seeds"/>
			</LinearLayout>

			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="16dp"
				android:layout_marginRight="16dp"
				android:onClick="clearFilters_clicked"
				android:text="@string/button_clear_filters"
				android:theme="@style/AppThemeDark"
				android:layout_marginEnd="16dp"
				android:layout_marginStart="16dp"/>


		</LinearLayout>
	</ScrollView>

	<LinearLayout
		android:id="@+id/sidetextfilter_header"
		style="@style/sidelist_header"
		tools:ignore="UseCompoundDrawables">

		<ImageView
			style="@style/sidelist_header_image"
			android:contentDescription="@string/text_filter"
			app:srcCompat="@drawable/ic_keyboard_white_24dp"
			tools:src="@drawable/ic_keyboard_white_24dp"/>

		<TextView
			style="@style/sidelist_header_text"
			android:text="@string/text_filter"/>
	</LinearLayout>

	<com.biglybt.android.FlexibleRecyclerView
		android:id="@+id/sidetextfilter_list"
		style="@style/sidelist_body"
		android:fadingEdge="vertical"
		android:fadingEdgeLength="10dp"
		android:scrollbars="vertical"
		app:fastScrollerEnabled="false"/>

	<EditText
		android:id="@+id/sidefilter_text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom"
		android:layout_marginLeft="@dimen/sidelist_filter_padding_x1"
		android:layout_marginRight="@dimen/sidelist_filter_padding_x2"
		android:gravity="bottom"
		android:hint="@string/hint_filter"
		android:inputType="text"
		android:maxLines="1"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:textColor="@color/list_sidebar_content_fg"
		android:theme="@style/AppThemeDark"
		android:visibility="gone"
		tools:visibility="visible"
		android:layout_marginEnd="@dimen/sidelist_filter_padding_x2"
		android:layout_marginStart="@dimen/sidelist_filter_padding_x1"/>

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_gravity="bottom|center_horizontal"
		android:layout_weight="0.001"
		android:adjustViewBounds="true"
		android:baselineAlignBottom="true"
		android:cropToPadding="false"
		android:maxWidth="100dp"
		android:padding="10dp"
		android:scaleType="fitEnd"
		android:tint="?sidelist_shadow"
		app:srcCompat="@drawable/biglybt_white_cutout"
		tools:ignore="ContentDescription"
		tools:src="@drawable/biglybt_white_cutout"
		tools:visibility="gone"/>
</LinearLayout>